Fix :Align Cogwheel
Minor changes

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body{
 }
 .main { 
   margin-top: 100px !important;
-    margin-left: 15px !important;
+    margin-left: 100px !important;
 }
 .cogwheel {
   width: 290px;
